# api-test-automation-samples

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/scripts/: parse_coverage.py
.github/workflows/: e2e_test.yml  e2e_test_dev.yml  frontend_unit_test.yml  unit_test.yml
docs/: API_SPECIFICATION.md  BRANCH_RULES.md  GITHUB_SETUP.md
src/: __init__.py  main.py
src/api/: database.py  main.py  models.py
src/api/data/markdown/: f27b6f81-9f96-4850-b4a6-b94b0b65e44c.md
src/api/services/: __init__.py  file_service.py  pdf_service.py
src/services/: file_service.py  pdf_service.py
src/ui/: .eslintrc.json  .gitignore  .npmrc  README.md  jest.config.ts  jest.setup.ts  next.config.js  package.json  pnpm-lock.yaml  tsconfig.jest.json
src/ui/src/__tests__/components/: FileDetailModal.test.tsx  FileListTable.test.tsx  FileUpload.test.tsx  MarkdownDisplay.test.tsx  Pagination.test.tsx  Sidebar.test.tsx
src/ui/src/__tests__/hooks/: useFileListPagination.test.ts  useViewportHeight.test.ts
src/ui/src/__tests__/lib/: api.test.ts
src/ui/src/app/: globals.css  layout.tsx  page.tsx
src/ui/src/app/files/: page.tsx
src/ui/src/app/upload/: page.tsx
src/ui/src/components/: FileDetailModal.tsx  FileListTable.tsx  FileUpload.tsx  MarkdownDisplay.tsx  Pagination.tsx  Sidebar.tsx
src/ui/src/hooks/: useFileListPagination.ts  useResponsivePagination.ts  useViewportHeight.ts
src/ui/src/hooks/__mocks__/: useMarkdownContext.ts  usePaginationContext.ts  useUploadState.ts
src/ui/src/lib/: api.ts
src/ui/src/types/: index.ts
src/ui/test/__mocks__/: react-markdown.js
src/ui/test/__mocks__/hooks/: useMarkdownContext.ts  usePaginationContext.ts  useUploadState.ts
test_markdown/: test-file-id-123.md
tests/e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
tests/e2e/fixtures/: test-data.ts
tests/e2e/helpers/: api-helpers.ts
tests/e2e/src/pages/: basePage.ts  filesListPage.ts  uploadPage.ts
tests/e2e/src/pages/components/: baseComponents.ts  fileDetailModal.ts  sideMenu.ts
tests/e2e/tests/: cleanup.api.spec.ts  connect.integration.spec.ts  crud.api.spec.ts  crud.spec.ts  error-handling.api.spec.ts  getFileDetail.integration.spec.ts  getFileList.integration.spec.ts  health.integration.spec.ts  health.spec.ts  integration.spec.ts  uploadFile.integration.spec.ts
tests/playwright/: playwright.config.ts  pnpm-lock.yaml
tests/unit/: __init__.py  conftest.py  test_api.py  test_services.py
tests/unit/fixtures/: __init__.py  mock_fixtures.py  test_data.py
tests/unit/helpers/: __init__.py  api_helpers.py  test_data.py
